assignment.tf
provider "aws" {
    region = "us-east-2"
    access_key = "AKIA2I7WQMD467NNCN5B"
    secret_key = "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"
}

# specify the variables
locals {
    ports_in = [
        443,
        80,
        22
    ]
    ports_out = [
        0
    ]
}

# 1. Create vpc

resource "aws_vpc" "prod-vpc" {
    cidr_block = "10.0.0.0/16"
    tags = {
        Name = "production"
    }
}

# 2. Create Internet Gateway

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.prod-vpc.id   
}

# 3. Create Custom Route Table

resource "aws_route_table" "prod-route-table" {
  vpc_id = aws_vpc.prod-vpc.id

  route {
      cidr_block = "0.0.0.0/0"
      gateway_id = aws_internet_gateway.gw.id
   }
#    {
#      ipv6_cidr_block        = "::/0"
#      gateway_id = aws_internet_gateway.gw.id
#    }
#  ]

  tags = {
    Name = "Prod"
  }
}

# 4. Create a Subnet

resource "aws_subnet" "subnet-1" {
    vpc_id      = aws_vpc.prod-vpc.id
    cidr_block  = var.subnet-prefix[0].cidr_block
    availability_zone = "us-east-1a"
    tags = {
        Name = var.subnet-prefix[0].name
    } 
}
resource "aws_subnet" "subnet-2" {
    vpc_id      = aws_vpc.prod-vpc.id
    cidr_block  = var.subnet-prefix[1].cidr_block
    availability_zone = "us-east-1a"
    tags = {
        Name = var.subnet-prefix[1].name 
    } 
}

# 5. Associate subnet with Route Table

resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet-1.id
  route_table_id = aws_route_table.prod-route-table.id
}

# 6. Create Security Group to allow port 22,80,443

resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic"
  description = "Allow Web inbound traffic"
  vpc_id      = aws_vpc.prod-vpc.id

dynamic "ingress" {
    for_each = toset(local.ports_in)
    content {
        description = "HTTPS from VPC"
        from_port = ingress.value
        to_port = ingress.value
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
}


#  ingress = [
#  {
#      description      = "HTTPS from VPC"
#      from_port        = 443
#      to_port          = 443
#      protocol         = "tcp"
#      cidr_blocks      = "0.0.0.0/0"
#      ipv6_cidr_blocks = "::/0"
#    },
#  {
#      description      = "HTTP from VPC"
#      from_port        = 80
#      to_port          = 80
#      protocol         = "tcp"
#
#      cidr_blocks      = "0.0.0.0/0"
#      ipv6_cidr_blocks = "::/0"
#    },
#  {
#      description      = "SSH from VPC"
#      from_port        = 22
#      to_port          = 22
#      protocol         = "tcp"
#      cidr_blocks      = "0.0.0.0/0"
#      ipv6_cidr_blocks = "::/0"
#    }
#  ]

#  egress = [
#    {
#      from_port        = 0
#      to_port          = 0
#      protocol         = "-1"
#      cidr_blocks      = "0.0.0.0/0"
#      ipv6_cidr_blocks = "::/0"
#    }
#  ]

  tags = {
    Name = "allow_WEB"
  }
}

# 7. Create a netowrk interface with an ip in the subnet that was created in step 4

resource "aws_network_interface" "web-server-nic" {
  subnet_id       = aws_subnet.subnet-1.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow_web.id]
}

# 8. Assign an elastic IP to the network interface created in step 7

resource "aws_eip" "one" {
  vpc                       = true
  network_interface         = aws_network_interface.web-server-nic.id
  associate_with_private_ip = "10.0.1.50"
  depends_on = [aws_internet_gateway.gw]
}

# 9. Create Ubuntu server and install/enable apache2

resource "aws_instance" "web-server-instance" {
    ami =           "ami-085925f297f89fce1"
    instance_type = "t2.micro"
    availability_zone = "us-east-2"
    key_name = "root-key"
    
    network_interface {
    device_index = 0
    network_interface_id = aws_network_interface.web-server-nic.id
    }

    user_data = <<-EOF
                #!/bin/bash
                sudo apt update -y
                sudo apt install apache2 -y
                sudo systemctl start apache2
                sudo systemctl enable apache2
                sudo bash -c 'echo your very first web server > /var/www/html/index.html'
                EOF
    tags = {
        Name = "web-server"
    } 
}

# 10. Extracting from the resources

output "server_public_ip" {
  value = aws_eip.one.public_ip
}

output "server_private_ip" {
  value = aws_instance.web-server-instance.private_ip
}

output "server_id" {
  value = aws_instance.web-server-instance.id
}

# 11. Variables 
variable "subnet-prefix" {
  description = "cidr block for subnet"
  #default = "10.0.0.0/16"
  #type

}
